--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "devDependencies": {
     "vitepress": "latest"
+  },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "marked": "^15.0.6"
   }
 }
