--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "axios": "^1.7.9",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
+    "markdown-it-container": "^4.0.0",
     "markdown-it-toc": "^1.1.0",
-    "marked": "^15.0.6"
+    "marked": "^15.0.6",
+    "marked-admonition-extension": "^0.0.4",
+    "marked-alert": "^2.1.2"
   }
 }
